# tdnet_oc_prediction

./: .gitignore  AGENTS.md  ExecPlan.md  README.md  pyproject.toml  spec.md
configs/: default.yaml  simulation.yaml  tdnet_stooq.yaml  tfidf_logreg.yaml  transformer.yaml
examples/: run_pipeline_example.ipynb
scripts/: build_dataset.py  collect_data.py  evaluate.py  run_all.py  simulate.py  train.py
src/tdnet_oc_prediction/config/: loader.py  schema.py
src/tdnet_oc_prediction/data/: calendar.py  dataset_builder.py  disclosure_client.py  price_client.py  stooq_client.py  tdnet_client.py  text_extractor.py  validators.py
src/tdnet_oc_prediction/evaluation/: calibration.py  evaluator.py  metrics.py
src/tdnet_oc_prediction/features/: text_preprocessor.py  tfidf_vectorizer.py  tokenizer.py
src/tdnet_oc_prediction/models/: base.py  majority.py  registry.py  tfidf_logreg.py  transformer_classifier.py
src/tdnet_oc_prediction/simulation/: backtester.py  cost.py  risk.py  signal.py
src/tdnet_oc_prediction/training/: callbacks.py  losses.py  trainer.py
src/tdnet_oc_prediction/utils/: io.py  logging.py  seed.py  time.py
tests/: test_collect_data_sources.py  test_config_loader.py  test_dataset_builder.py  test_labeling.py  test_metrics.py  test_run_all.py  test_simulation.py  test_transformer_classifier.py
tests/fixtures/: empty_disclosures.csv  empty_prices.csv
